# raytracingbg-cmakeproject

./: CMakeLists.txt  CMakeSettings.json  RaytracingBG_CMakeProject.cpp  RaytracingBG_CMakeProject.h  camera.cpp  camera.h  color.h  constants.h  geometry.cpp  geometry.h  main.cpp  matrix.cpp  matrix.h  sdl.cpp  sdl.h  shading.cpp  shading.h  util.h  vector.h
